# fpkg-transformer-template

./: README.md  cookiecutter.json
hooks/: pre_gen_project.py
transformer/: cookiecutter.json
{{cookiecutter.package_uid}}/: .gitignore  CHANGES.md  README.md  package.yml
{{cookiecutter.package_uid}}/help/: package_help.csv  {{cookiecutter.transformer_name}}.md
{{cookiecutter.package_uid}}/help/Resources/css/: style.css
{{cookiecutter.package_uid}}/help/Transformers/: {{cookiecutter.transformer_name}}-pkg.htm
{{cookiecutter.package_uid}}/python/{{cookiecutter.python_module}}/: .gitignore  MANIFEST.in  README.md  setup.cfg  setup.py  vendorize.toml  {{cookiecutter.python_module}}.py
{{cookiecutter.package_uid}}/python/{{cookiecutter.python_module}}/src/{{cookiecutter.python_module}}/: transformer.py  {{cookiecutter.python_filename}}.py  {{cookiecutter.transformer_file_name}}.py
{{cookiecutter.package_uid}}/python/{{cookiecutter.python_module}}/tests/: test_transformer.py  test_{{cookiecutter.python_filename}}.py
{{cookiecutter.package_uid}}/python/{{cookiecutter.python_package}}/: MANIFEST.in  README.md  setup.cfg  setup.py
{{cookiecutter.package_uid}}/python/{{cookiecutter.python_package}}/src/{{cookiecutter.python_module}}/: {{cookiecutter.transformer_file_name}}.py
{{cookiecutter.package_uid}}/transformers/: {{cookiecutter.transformer_name}}.fms  {{cookiecutter.transformer_name}}.fmx  {{cookiecutter.transformer_name}}.fmxj  {{cookiecutter.transformer_name}}.md
