[metadata]
name = {{cookiecutter.python_module}}
version = attr: {{cookiecutter.python_module}}.__version__
author = {{cookiecutter.author}}
description = Code for the {{cookiecutter.publisher_uid}}.{{cookiecutter.package_uid}}.{{cookiecutter.transformer_name}} transformer in FME
long_description = file: README.md
long_description_content_type = text/markdown
keywords = fme fmepy package
url = {{cookiecutter.package_url}}
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Framework :: FME
    Private :: Do Not Upload

[options]
package_dir=
    =src
packages = find:
include_package_data = True
python_requires = >=3.6

[options.packages.find]
where = src

[options.extras_require]
dev =
    vendorize
    pytest
    black~=22.1.0
